--- a/src/_assets/scss/_post.scss
+++ b/src/_assets/scss/_post.scss
@@ -133,6 +133,10 @@
 .anchor {
     opacity: 0.25;
     
+    width: 0;
+    display: inline-block;
+    margin-left: 0.5rem;
+    
     &::after {
         font-weight: normal;
         content: ' ⚓\FE0E';
